# uv-datascience-project-template

./: .coverage  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Dockerfile.debug  LICENSE  Makefile  README.md  cookiecutter.json  demo.py  docker-compose.yml  index.html  main.py  mkdocs.yml  multistage.Dockerfile  objects.inv  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
.devcontainer/: .dockerignore  .env  Dockerfile.debug  README.devcontainer.md  devcontainer.json  docker-compose.yml  vscode-extensions.txt  vscode-settings.json
.github/actions/setup-git-config/: action.yml
.github/actions/setup-python-with-uv/: action.yml
.github/workflows/: build-project.yml  check-all-workflows.yml  docker.yml  pre-commit.yml  publish-docs.yml  pyright.yml  ruff.yml  test.yml  testing.yml
about/: index.html
api/: index.html
api/autoencoder/: index.html
api/fastapi_app/: index.html
api/training/: index.html
blogpost_uv_data_science_project_template/: index.html
cookiecutter_hooks/: hooks_utils.py  post_gen_project.py  pre_gen_project.py  pre_prompt.py
docs/: about.md  blogpost_uv_data_science_project_template.md  index.md
docs/api/: autoencoder.md  fastapi_app.md  index.md  main.md  training.md
docs/guides/: ci_github.md  cookiecutter.md  docker_prod.md  docker_vscode_devcontainer.md  index.md  mkdocs.md  pre_commit.md  pyright.md  pytest.md  ruff.md  uv.md
docs/notebooks/: app_without_fastapi.ipynb
docs/project_configs/: pyproject.md
docs/stylesheets/: extra.css
guides/: index.html
guides/ci_github/: index.html
guides/cookiecutter/: index.html
guides/docker_prod/: index.html
guides/docker_vscode_devcontainer/: index.html
guides/mkdocs/: index.html
guides/pre_commit/: index.html
guides/pyright/: index.html
guides/pytest/: index.html
guides/ruff/: index.html
guides/uv/: index.html
hooks/: hooks_utils.py  post_gen_project.py  pre_gen_project.py  pre_prompt.py
notebooks/: main.ipynb
notebooks/app_without_fastapi/: index.html
scripts/: check_template_sync.py  uv_upgrade_dependencies.py
search/: search_index.json
src/dev_container_uv_datascience/: app_fastapi_autoencoder.py  lit_auto_encoder.py  train_autoencoder.py
src/litautoencoder/: lit_auto_encoder.py
src/uv_datascience_project_template/: __init__.py  app_fastapi_autoencoder.py  config.py  lit_auto_encoder.py  train_autoencoder.py
stylesheets/: extra.css
tests/: test_app_fastapi_autoencoder.py  test_lit_auto_encoder.py  test_main.py  test_train_autoencoder.py
{{cookiecutter.repo_name}}/: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE_APACHE  LICENSE_BSD  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json  settings.toml
{{cookiecutter.repo_name}}/docs/: about.md  index.md
{{cookiecutter.repo_name}}/docs/api/: index.md
{{cookiecutter.repo_name}}/docs/stylesheets/: extra.css
{{cookiecutter.repo_name}}/tests/: conftest.py  test_foo.py
