[project]
name = "uv-datascience-project-template"
version = "0.1.0"
description = "Template Project for Developing Data Science Projects with UV. A new project using this template can be created with cookiecutter."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "David Tiefenthaler"}
]
urls = {repository = "https://github.com/tiefenthaler/uv-datascience-project-template"}
keywords = [
    "data science project",
    "docker",
    "python",
    "template",
    "uv"
]
requires-python = ">=3.12.0, <3.13.0"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "lightning>=2.5.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "toml>=0.10.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "uvicorn>=0.35.0",
]

# DEV SETTING
[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.4",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.10.1",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
    "toml>=0.10.2",
    "toml-sort>=0.24.2",
    "uv>=0.8.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings-python>=1.16.12",
    "pymdown-extensions>=10.16",
]

# DEV SETTING
[tool.uv]
default-groups = ["dev"]

# DEV SETTING
# ruff.toml file is used.
[tool.ruff]

# DEV SETTING
# pytest.ini file is used.
[tool.pytest]

# DEV SETTING
# .coveragerc file is used. A pytest fixture in .conftest.py is used to create coverage file/report directory.
[tool.coverage]

# DEV SETTING
# pyrightconfig.json file is used. NOTE: Ensure to set the python version correctly.
[tool.pyright]

# DEV SETTING
# NOTE: to sort, run: "uv run toml-sort pyproject.toml"
[tool.tomlsort]
in_place = true
no_sort_tables = true
sort_inline_arrays = true
spaces_before_inline_comment = 4
spaces_indent_inline_array = 4

[tool.hatch.build.targets.wheel]
packages = ["src/uv_datascience_project_template"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
